fix: fixed "Elérhetőség" display on mobile on about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,4 +86,5 @@ body {
 
 th, td{
     @apply p-3;
+    word-break: break-word;
 }
